--- a/.env.example
+++ b/.env.example
@@ -21,11 +21,14 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=sqlite
-# DB_HOST=127.0.0.1
-# DB_PORT=3306
-# DB_DATABASE=laravel
-# DB_USERNAME=root
-# DB_PASSWORD=
+DB_DATABASE=D:\Projects\PHP\todo_api_laravel\database\database.sqlite
+
+#DB_CONNECTION=pgsql
+#DB_HOST=127.0.0.1
+#DB_PORT=5432
+#DB_DATABASE=todo_api
+#DB_USERNAME=postgres
+#DB_PASSWORD=1111
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
